--- a/PartyCrawler.html
+++ b/PartyCrawler.html
@@ -51,14 +51,13 @@
             <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Type of Event
             <span class="eventType"></span></button>
             <ul class="dropdown-menu">
-              <li><a href="#">Birthday Party</a></li>
-              <li><a href="#">Shhhh! Surprise Birthday Party</a></li>
-              <li><a href="#">Dinner Party</a></li>
-              <li><a href="#">Cocktail Party</a></li>
-              <li><a href="#">Block Party</a></li>
-              <li><a href="#">Housewarming Party</a></li>
-              <li><a href="#">Other</a></li>
-
+              <li><a href="#" value="1">Block Party</a></li>
+              <li><a href="#" value="2">Birthday Party</a></li>
+              <li><a href="#" value="3">Shhhh! Surprise Birthday Party</a></li>
+              <li><a href="#" value="3">Cocktail PartyDinner Party</a></li>
+              <li><a href="#" value="4">Dinner Party</a></li>
+              <li><a href="#" value="5">Housewarming Party</a></li>
+              <li><a href="#" value="6">Other</a></li>
             </ul>
           </div>
        
@@ -94,12 +93,13 @@
                     <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Attire
                     <span class="caret"></span></button>
                     <ul class="dropdown-menu">
-                      <li><a href="#">Casual</a></li>
-                      <li><a href="#">Dressy Casual</a></li>
-                      <li><a href="#">Business Casual</a></li>
-                      <li><a href="#">Semiformal</a></li>
-                      <li><a href="#">Black Tie</a></li>
-                      <li><a href="#">White Tie</a></li>
+                      <li><a href="#" value="1">Casual</a></li>
+                      <li><a href="#" value="2">Dressy Casual</a></li>
+                      <li><a href="#" value="3">Business Casual</a></li>
+                      <li><a href="#" value="4">Semiformal</a></li>
+                      <li><a href="#" value="5">Black Tie</a></li>
+                      <li><a href="#" value="6">White Tie</a></li>
+                      <li><a href="#" value="6">Other</a></li>
                     </ul>
                   </div>
                
@@ -107,8 +107,8 @@
                                 <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Child Policy
                                 <span class="caret"></span></button>
                                 <ul class="dropdown-menu">
-                                  <li><a href="#">Children allowed</a></li>
-                                  <li><a href="#">No Children</a></li>
+                                  <li><a href="#" value = "1">Children allowed</a></li>
+                                  <li><a href="#" value = "2">No Children</a></li>
                                 </ul>
                               </div>
     <div class = row>
