--- a/Index_bootstrap.html
+++ b/Index_bootstrap.html
@@ -1,5 +1,5 @@
 <html lang="en">
-  
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +7,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <script src="https://www.gstatic.com/firebasejs/4.9.1/firebase.js"></script>
+  <script src="assets/Javascript/rob_java.js"></script>
   <title>Really Fuckin Sweet App</title>
 </head>
 
@@ -21,14 +22,11 @@
         </div>
 
         <ul class="nav navbar-nav">
-          <li class="active"><a href="#">My Events</a></li>
+          <li class="active"><a href="file:///C:/Users/rpicc/Documents/Group%20Project%201/Index_bootstrap.html#">My Events</a></li>
           <li><a href="#">See Events</a></li>
+          <li><a href="file:///C:/Users/rpicc/Documents/Group%20Project%201/PartyCrawler.html">Create Event</li>
         </ul>
 
-        <ul class="nav navbar-nav navbar-right">
-          <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-          <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-        </ul>
       </div>
     </nav>
 
