HTML links working

--- a/Index_bootstrap.html
+++ b/Index_bootstrap.html
@@ -23,9 +23,9 @@
         </div>
 
         <ul class="nav navbar-nav">
-          <li class="active"><a href="file:///C:/Users/rpicc/Documents/Group%20Project%201/Index_bootstrap.html#">My Events</a></li>
+          <li class="active"><a href="file:///C:/Users/rpicc/Documents/Group%20Project%201/Index_bootstrap.html">My Events</a></li>
           <li><a href="#">See Events</a></li>
-          <li><a href="file:///C:/Users/rpicc/Documents/Group%20Project%201/PartyCrawler.html">Create Event</li>
+          <li><a href="PartyCrawler.html">Create Event</li>
         </ul>
 
       </div>
