--- a/PartyCrawler.html
+++ b/PartyCrawler.html
@@ -22,7 +22,7 @@
 
         <ul class="nav navbar-nav">
           <li class="active">
-            <a href="#">My Events</a>
+            <a href="Index_bootstrap.html">My Events</a>
           </li>
           <li>
             <a href="#">See Events</a>
