--- a/Index_bootstrap.html
+++ b/Index_bootstrap.html
@@ -52,7 +52,9 @@
 
           </tbody>
         </table>
-    </div>      
+    </div>
+    
+    <div class="google-div"><h2>Location Information</h2></div>
 
   </div>
   
