new html page added

--- a/Index_bootstrap.html
+++ b/Index_bootstrap.html
@@ -25,7 +25,7 @@
         <ul class="nav navbar-nav">
           <li class="active"><a href="file:///C:/Users/rpicc/Documents/Group%20Project%201/Index_bootstrap.html">My Events</a></li>
           <li><a href="#">See Events</a></li>
-          <li><a href="PartyCrawler.html">Create Event</li>
+          <li><a href="PartyCrawler.html">Create Event</a></li>
         </ul>
 
       </div>
@@ -52,6 +52,7 @@
 
           </tbody>
         </table>
+
     </div>
     
     <div class="google-div"><h2>Location Information</h2></div>
