updated firebase pull and html for item list

--- a/Add_page.html
+++ b/Add_page.html
@@ -17,6 +17,22 @@
     <div id="firebase-data">
       <h2>Your Party</h2>
     </div>
+    <table class="table table-bordered" id="itemsTbl">
+      <thead>
+        <tr>
+          <th>What'cha Bringin?</th>
+          <th>Claimed?</th>
+          <th>Whos on the hook?</th>
+        </tr>
+      </thead>
+
+      <tbody id="itemsBody">
+
+      </tbody>
+    </table>
+
+      </tbody>
+    </table>
   </div>
   
 </body>
