able to pull specific items from firebase andupdated HTML

--- a/Index_bootstrap.html
+++ b/Index_bootstrap.html
@@ -9,6 +9,7 @@
   <script src="https://www.gstatic.com/firebasejs/4.9.1/firebase.js"></script>
   <script src="assets/Javascript/rob_java.js"></script>
   <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
+  <script src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
   <title>Really Fuckin Sweet App</title>
 </head>
 
@@ -59,7 +60,7 @@
         </tbody>
       </table>
 
-      <div class="container" id="itemsContainer"></div>
+      <!-- <div class="container" id="itemsContainer">
       <table class="table table-bordered" id="itemsTbl">
         <thead>
           <tr>
@@ -75,7 +76,7 @@
       </table>
       <button type="button" id="addItemButn">Add Item</button>
       <button type="button"id="closeItemWindow">Main View</button>
-    </div>
+    </div> -->
   </div>
 
   <div class="google-div">
