changes to HTML and JS

--- a/PartyCrawler.html
+++ b/PartyCrawler.html
@@ -7,7 +7,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <script src="https://www.gstatic.com/firebasejs/4.9.1/firebase.js"></script>
-  <script src="assets/Javascript/rob_java.js"></script>
+  <script src="assets/javaScript/rob_java.js"></script>
+  <script src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
   <title>Party Crawler</title>
 </head>
 
@@ -127,24 +128,7 @@
               </select>
             </div>
 
-
-
-      <div class="row">
-        <div class="form-group col-sm-6">
-          <label for="invitees">List of Invitees</label>
-          <input type="text" class="form-control" id="invitees">
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="form-group col-sm-6">
-          <label for="items">Items to Bring</label>
-          <input type="text" class="form-control" id="items">
-        </div>
-      </div>
-
-
- <input type="submit" value="Submit">    
+ <input type="submit" value="Submit" id="submit">    
 </form>
 
 
