--- a/Index_bootstrap.html
+++ b/Index_bootstrap.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="assets/style.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <script src="https://www.gstatic.com/firebasejs/4.9.1/firebase.js"></script>
@@ -43,7 +44,7 @@
     </div>
 
     <div class="container">
-      <h2>Events Bro</h2>
+      <h2>My Events</h2>
       <table class="table table-bordered" id="pendingEvents">
         <thead>
           <tr>
@@ -68,7 +69,7 @@
             <input type="text" class="form-control" id="who">
           </div>
           <div class="form-group col-sm-4">
-            <label for="what">What are you brining</label>
+            <label for="what">What are you bringing?</label>
             <input type="text" class="form-control" id="what">
           </div>
         </div>
@@ -91,6 +92,7 @@
       <button id="lap">Add Item</button>
     </div>
   </div>
+
 
   <div class="google-div">
     <h2>Location Information</h2>
