--- a/Index_bootstrap.html
+++ b/Index_bootstrap.html
@@ -7,7 +7,8 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="assets/style.css">
   <script src="https://www.gstatic.com/firebasejs/4.9.1/firebase.js"></script>
-  <title>Really Fuckin Sweet App</title>
+  <script src="assets/javascript/rob_java.js"></script>
+  <title>Really Sweet App</title>
 </head>
 
 <body>
@@ -22,10 +23,7 @@
 
         <ul class="nav navbar-nav">
           <li class="active">
-            <a href="file:///C:/Users/rpicc/Documents/Group%20Project%201/Index_bootstrap.html">My Events</a>
-          </li>
-          <li>
-            <a href="#">See Events</a>
+            <a href="Index_bootstrap.html">Events</a>
           </li>
           <li>
             <a href="PartyCrawler.html">Create Event</a>
@@ -107,7 +105,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
   <script src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
-  <script src="assets/Javascript/rob_java.js"></script>
+  
 </body>
 
 </html>
