--- a/PartyCrawler.html
+++ b/PartyCrawler.html
@@ -8,8 +8,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <script src="https://www.gstatic.com/firebasejs/4.9.1/firebase.js"></script>
-  <script src="assets/javaScript/rob_java.js"></script>
-  <script src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
+  <script src="assets/javaScript/FormSubmit.js"></script>
+  <!-- <script src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script> -->
   <title>Party Crawler</title>
 </head>
 
@@ -83,7 +83,7 @@
 
       <div class="row">
         <div class="form-group col-sm-6">
-          <label for="descripction">Short Description:</label>
+          <label for="description">Short Description:</label>
           <textarea class="form-control" rows="5" id="description"></textarea>
         </div>
       </div>
@@ -129,7 +129,7 @@
               </select>
             </div>
 
- <input type="submit" value="Submit" id="submit">    
+ <button type="submit"  id="submitParty">Submit</button>    
 </form>
 
 
